--- a/Temporizador/Properties/Resources.resx
+++ b/Temporizador/Properties/Resources.resx
@@ -118,19 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="digital_7__mono_" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\font\digital-7 (mono).ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="mixkit_arcade_retro_game_over_213" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\sounds\mixkit-arcade-retro-game-over-213.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="mixkit_sad_game_over_trombone_471" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sounds\mixkit-sad-game-over-trombone-471.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="mixkit_classic_alarm_995" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\sounds\mixkit-classic-alarm-995.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="mixkit_sad_game_over_trombone_471" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\sounds\mixkit-sad-game-over-trombone-471.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="mixkit_arcade_retro_game_over_213" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sounds\mixkit-arcade-retro-game-over-213.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="power-off-button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\power-off-button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="mixkit_small_group_cheer_and_applause_518" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\sounds\mixkit-small-group-cheer-and-applause-518.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="digital_7__mono_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\font\digital-7 (mono).ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="play" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\play.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
