--- a/Temporizador/Properties/Resources.resx
+++ b/Temporizador/Properties/Resources.resx
@@ -133,10 +133,10 @@
   <data name="mixkit_small_group_cheer_and_applause_518" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\sounds\mixkit-small-group-cheer-and-applause-518.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="digital_7__mono_" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\font\digital-7 (mono).ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="play" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\play.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="digital_7_mono_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\font\digital-7(mono).ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
